--- a/src/components/Svg/arrow-right/arrow-right.scss
+++ b/src/components/Svg/arrow-right/arrow-right.scss
@@ -1,4 +1,4 @@
-@import "../../variable";
+@import "../../../styles/variable";
 
 .homes__svg_arrow-right {
   position: absolute;
@@ -15,5 +15,8 @@
   box-shadow: 0 3px 10px rgba(0,0,0,0.5);
   & svg {
     transform: rotate(270deg);
+  }
+  &__display-none{
+    display: none;
   }
 }
