lesson-33: section Homes Guest loves add image

--- a/src/components/homes-guests-loves/homes/homes.scss
+++ b/src/components/homes-guests-loves/homes/homes.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/variable";
 
+.container {
+  @extend %container
+}
+
 .homes {
   background-color: $background-gray;
   &__caption{
