--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -10,3 +10,8 @@ $gray200: #1d1e1f;
 $gray300: #4d4d4d;
 $background-gray: #eaf0f9;
 $stroke-color: #F3F3F4;
+
+%container{
+  width: 1232px;
+  margin: 0 auto;
+}
