lesson-36: section Header and Available hotels from get https, had refined slider for good work Available

--- a/src/components/Svg/arrow-left/arrow-left.scss
+++ b/src/components/Svg/arrow-left/arrow-left.scss
@@ -10,13 +10,15 @@
   background-color: $stroke-color;
   text-align: center;
   line-height: 35px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
   left: 8px;
-  transform: translate(-50%,-50%);
-  & svg {
+  transform: translate(-50%, -50%);
+
+  & img {
     transform: rotate(90deg);
   }
-  &__display-none {
-    display: none;
-  }
+}
+
+.homes__display-none {
+  display: none;
 }
