--- a/src/components/Svg/arrow-right/arrow-right.scss
+++ b/src/components/Svg/arrow-right/arrow-right.scss
@@ -7,16 +7,18 @@
   top: 41%;
   right: 8px;
   cursor: pointer;
-  transform: translate(50%,-50%);
+  transform: translate(50%, -50%);
   border-radius: 50%;
   background-color: $stroke-color;
   text-align: center;
   line-height: 35px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.5);
-  & svg {
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+
+  & img {
     transform: rotate(270deg);
   }
-  &__display-none{
-    display: none;
-  }
+}
+
+.homes__display-none {
+  display: none;
 }
