--- a/src/components/header/form/form.scss
+++ b/src/components/header/form/form.scss
@@ -43,10 +43,15 @@
       font-weight: normal;
       font-size: 17px;
       line-height: 21px;
-      text-align: center;
       color: $white;
-      margin-left: 20px;
-      bottom: 87px;
+      bottom: 41px;
+
+      input {
+        position: absolute;
+        margin-top: 20px;
+        left: 0;
+        top: 21px;
+      }
     }
   }
   &__input-date-block {
