lesson-37: change filters block, work select, add clever className, add new component FilterCounter.

--- a/src/components/header/form/form.scss
+++ b/src/components/header/form/form.scss
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: center;
     margin: 145px 0 120px 0;
+    position: relative;
   }
   &__input-place-block {
     flex-basis: 39%;
