--- a/src/components/header/filters/filters.scss
+++ b/src/components/header/filters/filters.scss
@@ -9,6 +9,7 @@
     flex-basis: 26%;
     position: relative;
     background-color: white;
+    border-radius: 5px;
   }
   &__input {
     padding: 0 25px 0 25px;
