lesson-39: add new block SignIn

--- a/src/components/header/header/header.scss
+++ b/src/components/header/header/header.scss
@@ -16,6 +16,7 @@ header {
   background-image: url("../../../assets/image/castelmezzano.png");
   background-size: cover;
   background-position: center;
+  min-height: 900px;
 }
 
 
