--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,3 +13,10 @@
   font-size: 24px;
   color: $primary-text;
 }
+
+.sprites {
+  position: absolute;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
