--- a/src/components/header/sign-in/sign-in.scss
+++ b/src/components/header/sign-in/sign-in.scss
@@ -36,6 +36,7 @@
     border: 2px solid $secondary-text;
     box-sizing: border-box;
     border-radius: 8px;
+    padding-left: 10px;
   }
   &__button {
     background-color: $primary;
