--- a/src/components/header/filters/filters.scss
+++ b/src/components/header/filters/filters.scss
@@ -10,6 +10,7 @@
     position: relative;
     background-color: white;
     border-radius: 5px;
+    cursor: pointer;
   }
   &__input {
     padding: 0 25px 0 25px;
