lesson-42: add @emotion and theme provider

--- a/src/components/reactDatePicker/react-datepicker-cssmodules.scss
+++ b/src/components/reactDatePicker/react-datepicker-cssmodules.scss
@@ -9,4 +9,8 @@
   font-size: 19px;
   width: 130px;
   cursor: pointer;
+  color: #383838;
+  &::-webkit-input-placeholder {
+    color: #383838;
+  }
 }
